[gd_scene load_steps=13 format=2]

[ext_resource path="res://roots.gd" type="Script" id=1]
[ext_resource path="res://Sprites/roottex.png" type="Texture" id=2]
[ext_resource path="res://Sprites/roottexhoriz.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2, 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Root1" type="KinematicBody2D" parent="."]
position = Vector2( 64, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root1"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root1"]
shape = SubResource( 1 )

[node name="RootSprite" type="Sprite" parent="Root1"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Root2" type="KinematicBody2D" parent="."]
position = Vector2( 128, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root2"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root2"]
shape = SubResource( 2 )

[node name="RootSprite" type="Sprite" parent="Root2"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Root3" type="KinematicBody2D" parent="."]
position = Vector2( 192, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root3"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root3"]
shape = SubResource( 3 )

[node name="RootSprite" type="Sprite" parent="Root3"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Root4" type="KinematicBody2D" parent="."]
position = Vector2( 256, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root4"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root4"]
shape = SubResource( 4 )

[node name="RootSprite" type="Sprite" parent="Root4"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Root5" type="KinematicBody2D" parent="."]
position = Vector2( 320, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root5"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root5"]
shape = SubResource( 5 )

[node name="RootSprite" type="Sprite" parent="Root5"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Root6" type="KinematicBody2D" parent="."]
position = Vector2( 384, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root6"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root6"]
shape = SubResource( 6 )

[node name="RootSprite" type="Sprite" parent="Root6"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Root7" type="KinematicBody2D" parent="."]
position = Vector2( 448, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root7"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root7"]
shape = SubResource( 7 )

[node name="RootSprite" type="Sprite" parent="Root7"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Root8" type="KinematicBody2D" parent="."]
position = Vector2( 512, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root8"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root8"]
shape = SubResource( 8 )

[node name="RootSprite" type="Sprite" parent="Root8"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="Root9" type="KinematicBody2D" parent="."]
position = Vector2( 576, 0 )

[node name="ConnectorSprite" type="Sprite" parent="Root9"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root9"]
shape = SubResource( 9 )

[node name="RootSprite" type="Sprite" parent="Root9"]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -2, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 4, 4 )
